# os-net-descriptor-passing

./: CMakeLists.txt  client.cpp  client.h  main-client.cpp  main-server.cpp  message_utils.h  pipe.cpp  pipe.h  server.cpp  server.h  socket_wrapper.cpp  socket_wrapper.h
